--- a/Mobile/Mobile/Views/AboutPage.xaml
+++ b/Mobile/Mobile/Views/AboutPage.xaml
@@ -35,22 +35,14 @@
                          Padding="30,24,30,24"
                          Spacing="10">
 
+                <Label Text="What should your player name be?" />
+                <Entry Text="{Binding DesiredPlayerName}" />
                 <Button Margin="0,10,0,0"
-                        Text="Learn more"
-                        Command="{Binding GetWeatherCommand}"
+                        Text="Join Game"
+                        Command="{Binding JoinGameCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                <CollectionView ItemsSource="{Binding WeatherResults}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="{Binding Date, StringFormat='{0:d MMMM}'}" />
-                                <Label Text="{Binding Summary}" />
-                                <Label Text="{Binding TemperatureF, StringFormat=' and {0}℉'}" />
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                <Label Text="{Binding Result}" />
             </StackLayout>
         </ScrollView>
     </Grid>
